envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
bootstrap_extensions:
- name: envoy.bootstrap.wasm
  typed_config:
    '@type': type.googleapis.com/envoy.extensions.wasm.v3.WasmService
    singleton: true
    config:
      name: singleton_service
      root_id: singleton_service
      configuration:
        "@type": type.googleapis.com/google.protobuf.StringValue
        value: |
          {
            "mmdb_url": "http://mmdb:8080/GeoLite2-Country.mmdb",
            "mmdb_cluster": "mmdb"
          }
      vm_config:
        runtime: envoy.wasm.runtime.v8
        vm_id: geoip_vm
        code:
          local:
            filename: /etc/singleton_service.wasm
static_resources:
  listeners:
    - name: geopip-filter
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: httpbin }
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: geoip_filter
                        root_id: geoip_filter
                        vm_config:
                          runtime: envoy.wasm.runtime.v8
                          vm_id: geoip_vm
                          code:
                            local:
                              filename: /etc/geoip_filter.wasm
                          allow_precompiled: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: httpbin
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80
    - name: mmdb
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mmdb
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: mmdb
                    port_value: 8080
